@@ -1,4 +1,4 @@
-package com.nnk.springboot.controllers.api;
+package com.nnk.springboot.controllers;
 
 import com.nnk.springboot.domain.BaseEntity;
 import com.nnk.springboot.service.CrudService;
@@ -13,6 +13,7 @@ import javax.validation.Valid;
 import java.lang.reflect.Field;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -23,7 +24,14 @@ public abstract class CrudController<M extends BaseEntity, S extends CrudService
 
     public abstract String getModelIdentifier();
 
-    @RequestMapping("/list")
+    public Set<String> generateFields(M model) {
+        return Arrays.stream(model.getClass().getDeclaredFields())
+                .map(Field::getName)
+                .filter(f -> !f.equalsIgnoreCase("id"))
+                .peek(log::info).collect(Collectors.toSet());
+    }
+
+    @GetMapping
     public String list(Model model) {
         List<M> all = service.findAll();
         model.addAttribute("list", all);
@@ -33,39 +41,37 @@ public abstract class CrudController<M extends BaseEntity, S extends CrudService
     @SneakyThrows
     @GetMapping("/add")
     public String addForm(M add, Model model) {
-        model.addAttribute("fields", Arrays.stream(add.getClass().getDeclaredFields())
-                .map(Field::getName)
-                .filter(f -> !f.equalsIgnoreCase("id"))
-                .peek(log::info).collect(Collectors.toSet()));
-        model.addAttribute("add", add.getClass().newInstance());
+        model.addAttribute("routerPath", getModelIdentifier());
+        model.addAttribute("fields", generateFields(add));
+        model.addAttribute("add", add.getClass().getDeclaredConstructor().newInstance());
         return "/add";
     }
 
     @PostMapping("/add")
     public String add(@Valid @ModelAttribute(name = "add") M add, BindingResult result) {
-        if (!result.hasErrors()) {
-            service.create(add);
-            return "redirect:/" + getModelIdentifier() + "/list";
+        if (result.hasErrors()) {
+            return "/add";
         }
-        return "/add";
+        service.create(add);
+        return "redirect:/" + getModelIdentifier() + "/list";
     }
 
     @GetMapping("/update/{id}")
     public String updateForm(@PathVariable("id") Long id, Model model) {
+        model.addAttribute("routerPath", getModelIdentifier());
         M update = service.findById(id).orElseThrow();
-        // TODO DTO
         model.addAttribute("update", update);
-        return getModelIdentifier() + "/update";
+        model.addAttribute("id", update.getId());
+        model.addAttribute("fields", generateFields(update));
+        return "/update";
     }
 
     @PostMapping("/update/{id}")
-    public String update(@PathVariable("id") Long id, @Valid @ModelAttribute("update") M update, BindingResult result) {
+    public String update(@PathVariable("id") Long id, @Valid @ModelAttribute("update") M update, Model model, BindingResult result) {
         if (result.hasErrors()) {
-            log.info(result.getAllErrors());
-            return getModelIdentifier() + "/update";
+            return "/update";
         }
-        update.setId(id);
-        service.update(update);
+        service.update(update, id);
         return "redirect:/" + getModelIdentifier() + "/list";
     }
 
